<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="select_an_option_to_download">Please, select a file to download</string>
    <string name="wait_to_finish_download">Please, wait to finish the current download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="ok">Ok</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_option">Glide - Image Loading Library </string>
    <string name="loadapp_option">LoadApp - Current Repository</string>
    <string name="retrofit_option">Retrofit - Type-safe for HTTP</string>
    <string name="file_name">File name:</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
</resources>
